# depends-on-rs

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: config.rs  dag.rs  envsubst.rs  lib.rs  main.rs  manager.rs  process.rs  ready.rs
tests/: manager.rs
